Исправленное домашнее задание 01, согласно рекомендациям